css/styles.css
h1 {
  font-family: 'PT Serif', serif;
  font-size: 8rem;
  margin-bottom: 1.25rem;
}

h2 {
  font-family: 'PT Serif', serif;
  font-size: 5rem;
  margin-bottom: 1.25rem;
}

h3 {
  font-family: 'Open Sans', sans-serif;
  font-weight: lighter;
  font-size: 1.3rem;
  max-width: 60rem;
  line-height: 1.5;
  margin-bottom: 1.25rem;
}

p {
  font-family: 'Open Sans', sans-serif;
}

form {
  margin-top: 1rem;
  max-width: 60rem;
  margin-bottom: 10rem;
}

label {
  font-family: 'Open Sans', sans-serif;
  font-size: 1.25rem;
  margin-bottom: 1rem;
}

label.field {
  margin-top: 2rem;
}


input {
  border-color: #586069;
  max-width: 40rem;
}

.container {
  padding-top: 3.5rem;
  padding-left: 5rem;
  margin-left: auto;
  margin-right: auto;
  max-width: 1280px;
}

.button-main {
  background-color: #ED2939;
  padding: 1rem;
  font-size: 1rem;
  color: #ffffff;
  border: none;
  border-radius: .25em;
  margin-top: 1rem;
  font-family: 'Open Sans', sans-serif;
  letter-spacing: .07em;
  text-transform: uppercase;
  min-width: 12rem;
}


.radio-group {
  margin-top: 2.5rem;
}

.radio label {
  font-size: 1rem !important;
  margin-left: 1rem;
}

input[type="radio"] {
  background-color: red !important;
}


.results {
  margin-right: 6rem;
}

#submit-quiz {
  margin-top: 2.5rem;
}

#header {
  margin-top: .25rem;
  margin-right: 2.5rem;
}

#header h3 {
  font-size: 1.7rem;
}

/* @media screen and (max-width : 520px) {
  .container {
    margin-right: 10px;
  } */

